<resources>
    <string name="app_name">Sensor</string>
    <string name="ble_scan_error">Failed to scan devices</string>
    <string name="ble_enable_request">Enable Bluetooth to use the feature</string>
    <string name="device_ble_support_error">Device doesn\'t support Bluetooth Low Energy</string>
    <string name="ble_scan_unknown_error">Something wrong happens</string>
    <string name="device_name">Device name</string>
    <string name="rssi">RSSI</string>
    <string name="rssi_placeholder">-0.0</string>
    <string name="rssi_units">dBm</string>
    <string name="mac_address">MAC</string>
    <string name="address_placeholder">00:00:00:00:00:00</string>
    <string name="scan_placeholder">No devices</string>
    <string name="unknown_device_name">Unknown</string>
    <string name="location_permission_deny_error">Grant the location permission to use the feature</string>
    <string name="location_enable_request_msg">Enable Location to use the feature</string>
    <string name="location_enable_request_title">Location access</string>
    <string name="location_enable_request_btn_positive">Open settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="service_name">Service Name</string>
    <string name="uuid">UUID</string>
    <string name="service_type">Type</string>
    <string name="service_type_placeholder">UNKNOWN</string>
    <string name="uuid_placeholder">0x0000</string>
    <string name="device_services_discovering_error">Fail to find device services</string>
    <string name="characteristic_name">Characteristic name</string>
    <string name="characteristic_value_label">Value</string>
    <string name="characteristic_value_placeholder">0x0000</string>
    <string name="notify">Notify</string>
    <string name="cancel">Cancel</string>
    <string name="characteristic_properties_placeholder">UNKNOWN</string>
    <string name="characteristic_properties_label">Properties</string>
    <string name="char_prop_read">READ</string>
    <string name="char_prop_write">WRITE</string>
    <string name="char_prop_notify">NOTIFY</string>
    <string name="char_prop_indicate">INDICATE</string>
</resources>
